# fotosidan

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  install-systemd.sh  pyproject.toml  regenerate_medium.py  start.sh
fotosidan/: __init__.py  app_admin.py  app_public.py  config.py  database.py  main.py  models.py
fotosidan/routes/: admin.py  public.py
static/: admin.css  gallery.css  lightbox.js
