[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fotosidan"
version = "0.1.0"
description = "Personal photo gallery web application"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "Pillow>=10.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "httpx>=0.24"]

[tool.setuptools.packages]
find = {}
